--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
         <li><a href="templates/solicitudes_nuevos_empleados.html">Solicitudes de Nuevos Empleados</a></li>
         <li><a href="templates/tipo_criterio_evaluacion.html">Tipo de Criterio de Evaluación</a></li>
         <li><a href="templates/tipos_contrato.html">Tipos de Contrato</a></li>
+        <li><a href="templates/competencias_faltantes.html">Informes de Competencias Faltantes</a></li>
+        <li><a href="templates/costos_de_contratacion.html">Informes de Costos de Contratacion</a></li>
+        <li><a href="templates/reporte_evaluacion_desempeno.html">Reportes de Evaluacion de Desempeño</a></li>
     </ul>
 </body>
 </html>
