--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="templates/cargos.html">Cargos</a></li>
         <li><a href="templates/competencias.html">Competencias</a></li>
         <li><a href="templates/contratos.html">Contratos</a></li>
-        <li><a href="templates/costos_de_personal.html">Costos de Personal</a></li>
+        <li><a href="templates/costos_de_personal.html">Informe Costos de Personal</a></li>
         <li><a href="templates/criterios_evaluacion.html">Criterios de Evaluación</a></li>
         <li><a href="templates/departamentos.html">Departamentos</a></li>
         <li><a href="templates/empleados.html">Empleados</a></li>
