Agregado contratar nuevo empleado

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <li><a href="templates/competencias_faltantes.html">Informes de Competencias Faltantes</a></li>
         <li><a href="templates/costos_de_contratacion.html">Informes de Costos de Contratacion</a></li>
         <li><a href="templates/reporte_evaluacion_desempeno.html">Reportes de Evaluacion de Desempeño</a></li>
+        <li><a href="templates/contratar_nuevo_empleado.html">Contratar Nuevo Empleado</a></li>
     </ul>
 </body>
 </html>
