Agregado Seguimiento de Ausencias y Retardos

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <li><a href="templates/costos_de_contratacion.html">Informes de Costos de Contratacion</a></li>
         <li><a href="templates/reporte_evaluacion_desempeno.html">Reportes de Evaluacion de Desempeño</a></li>
         <li><a href="templates/contratar_nuevo_empleado.html">Contratar Nuevo Empleado</a></li>
+        <li><a href="templates/ausencias_retardos.html">Seguimiento de Ausencias y Retardos</a></li>
     </ul>
 </body>
 </html>
