agregado iniciar sesion

--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@
     <nav class="navbar">
         <button class="toggle-btn" id="toggle-btn" onclick="toggleSidebar()">☰</button>
         <div class="nav-links">
-            <a href="#">🏠 Inicio</a>
+            <a href="index.html">🏠 Inicio</a>
             <a href="#">⚙️ Configuración</a>
-            <a href="#">🚪 Cerrar Sesión</a>
+            <a href="templates/iniciar_sesion.html">🚪 Cerrar Sesión</a>
         </div>
     </nav>
 
