Tamaños letras menu y tablas. Quitados IDs. Cambiado formato fecha

--- a/index.html
+++ b/index.html
@@ -83,12 +83,13 @@
         text-decoration: none;
         opacity: 0;
         transition: opacity 0.3s ease;
-        padding: 10px 15px;
+        padding: 5px 10px;
         margin-top: 10px;
-        max-width: 90%; /* Para que no ocupe todo el ancho */
+        max-width: 95%; /* Para que no ocupe todo el ancho */
         word-wrap: break-word; /* Evita que el texto se salga del contenedor */
         overflow-wrap: break-word; /* Soporte adicional para navegadores modernos */
         white-space: normal; /* Permite saltos de línea automáticos */
+        font-size: 14px;
     }
 
         .sidebar a:hover {
